--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1 {
 
 /* Sticky Header Styles */
 .sticky-header {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
