--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,10 @@ h1 {
 .theme-switch-wrapper {
     display: flex;
     align-items: center;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    margin-right: 40px;
 }
 
 .theme-switch {
